# Qt-Graphics-Editor

./: CMakeLists.txt  README.md  Readme.md  circle.cpp  circle.h  freehand.cpp  freehand.h  hexagon.cpp  hexagon.h  line.cpp  line.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mouse_move.cpp  mouse_move.h  mouse_press.cpp  mouse_press.h  mouse_release.cpp  mouse_release.h  objects.h  paint_and_keyboard.cpp  paint_and_keyboard.h  parser.cpp  parser.h  parser_helper.cpp  parser_helper.h  parser_object_creation.cpp  parser_object_creation.h  rectangle.cpp  rectangle.h  roundedrectangle.cpp  roundedrectangle.h  setup_edit_connections.cpp  setup_edit_connections.h  setup_file_connections.cpp  setup_file_connections.h  setup_tool_connections.cpp  setup_tool_connections.h  setup_toolbar.cpp  (+5 more)
